// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> matches snapshot 1`] = `
<div>
  <div
    class="container-class css-wkuptz-radioButtonContainer-radioButtonContainer"
    id="container-id"
  >
    <input
      class="radio-class"
      id="radio-id"
      type="radio"
      value="testValue"
    />
    <label
      for="radio-id"
    >
      Test label
    </label>
  </div>
</div>
`;

exports[`<Radio /> matches snapshot with \`inline = true\` 1`] = `
<div>
  <div
    class="css-1l41uua-radioButtonContainer-radioButtonContainer"
  >
    <input
      id="testId"
      type="radio"
      value="testValue"
    />
    <label
      for="testId"
    >
      Test label
    </label>
  </div>
</div>
`;
